# MM_CPP_3rdParty_Public

./: .gitattributes  meson.build  meson_options.txt
Thorlabs/: meson.build
Thorlabs/Kurios-C++SDKv1.6.2/: KURIOS_COMMAND_LIB.h  KURIOS_COMMAND_LIB_Win32.lib  KURIOS_COMMAND_LIB_Win64.lib
hidapi/: meson.build  notes.txt
hidapi/x64/: hidapi.lib
hidapi/x86/: hidapi.lib
libdc1394-2.2.1-bin/: meson.build  readme.txt
libdc1394-2.2.1-bin/Win32/: libdc1394-22.lib
libdc1394-2.2.1-bin/x64/: libdc1394-22.lib
modbus/: meson.build
modbus/3.1.4/win32/: modbus.exp  modbus.lib
modbus/3.1.4/win64/: modbus.exp  modbus.lib
pugixml-1.8/: meson.build
pugixml-1.8/build-vs2010/Win32/: pugixmls.lib
pugixml-1.8/build-vs2010/x64/: pugixmls.lib
